<?xml version="1.0"?>
<package format="2">
  <name>pozyx_to_ros</name>
  <version>1.0.0</version>
  <description>Convert the coordinates from a Pozyx device to ROS</description>

  <maintainer email="mathias.mellemstuen@gmail.com">Mathias Mellemstuen</maintainer>
  <maintainer email="ruben.fosby@hiof.no">Ruben Fosby</maintainer>
  <maintainer email="Tobias@hallingstad.me">Tobias Hallingstad</maintainer>
  
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python-yaml</exec_depend>
  
  <export>

  </export>
</package>
